--- a/css/silverwolf/default.css
+++ b/css/silverwolf/default.css
@@ -286,22 +286,30 @@ button {
 	font-size: 10px;
    vertical-align: middle;
    cursor: hand;
-   }
+}
+
 button:hover {
    border-top-color: #638094;
    background: #638094;
-  background: -webkit-gradient(linear, left top, left bottom, from(#0DA4AE), to(#FFE7E7));
-   background: -webkit-linear-gradient(top, #0DA4AE, #FFE7E7);
-   background: -moz-linear-gradient(top, #0DA4AE, #FFE7E7);
-   background: -ms-linear-gradient(top, #0DA4AE, #FFE7E7);
-   background: -o-linear-gradient(top, #0DA4AE, #FFE7E7);
+  background: -webkit-gradient(linear, left top, left bottom, from(#9CA4AE), to(#EEE7E7));
+   background: -webkit-linear-gradient(top, #9CA4AE, #EEE7E7);
+   background: -moz-linear-gradient(top, #9CA4AE, #EEE7E7);
+   background: -ms-linear-gradient(top, #9CA4AE, #EEE7E7);
+   background: -o-linear-gradient(top, #9CA4AE, #EEE7E7);
    color: #484848;
    cursor: pointer;
-   }
+}
+
 button:active {
    border-top-color: #1b435e;
-   background: #1b435e;
-   }
+  background: #638094;
+  background: -webkit-gradient(linear, left top, left bottom, from(#0DA4AE), to(#FFE7E7));
+   background: -webkit-linear-gradient(top, #9DA4AE, #FFE7E7);
+   background: -moz-linear-gradient(top, #9DA4AE, #FFE7E7);
+   background: -ms-linear-gradient(top, #9DA4AE, #FFE7E7);
+   background: -o-linear-gradient(top, #9DA4AE, #FFE7E7);
+}
+
 input.number {
 	text-align: right;
 }
